# IV112-tasks

./: .gitignore  CMakeLists.txt
Results/Task_3/: task3B-B2
Task_1/: task1.cpp
Task_11/: task11.cpp
Task_12/: task12.cpp
Task_13/: task13.cpp
Task_2/: task2.cpp
Task_3/: task3.cpp
Task_4/: task4.cpp
Task_5/: task5.cpp
Task_6/: task6.cpp
Task_7/: task7.cpp
Task_8/: task8.cpp
Task_9/: task9.cpp
framework/: CMakeLists.txt  framework.hpp  labyrinth.hpp  main.cpp
